# yk-orchestrator

./: .env.example  .gitignore  README.md  appcast.xml
.github/workflows/: release.yml
apps/api/: pyproject.toml
apps/api/app/: __main__.py  main.py
apps/api/app/agents/: chat_agent.py  code_agent.py  jira_agent.py  pr_agent.py  prompts.py  standup_agent.py  testflight_agent.py  transcript_agent.py  yesterday_agent.py
apps/api/app/core/: action_log.py  active_project.py  config.py  db.py  events.py  llm_router.py  logging.py  paths.py
apps/api/app/integrations/: bitbucket_client.py  fastlane_runner.py  git_local.py  jira_client.py  llm.py  providers.py  rag.py
apps/api/app/models/: __init__.py  action_log.py  chat.py  daily.py  jira.py  pr.py  project.py  settings_kv.py  transcript.py
apps/api/app/routers/: actions.py  agent.py  bitbucket.py  chat.py  health.py  jira.py  llm.py  projects.py  pull_requests.py  settings.py  standup.py  stream.py  testflight.py  transcript.py  wizard.py
apps/api/data/: orchestrator.db  orchestrator.db-shm  orchestrator.db-wal
apps/dashboard/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
desktop/: icon_generator.swift  project.yml
desktop/YKOrchestrator/: Info.plist  YKOrchestrator.entitlements
docs/: architecture.md
launcher/: .startup.sh  Dev.command  Setup.command  Start.command  Stop.command
scripts/: install-launchd.sh  morning-fetch.sh  release.sh  run-dev.sh  setup.sh  update_appcast.py
scripts/launchd/: com.yk.orchestrator.morning.plist
(+78 files in other folders)
