[project]
name = "yk-orchestrator-api"
version = "0.1.0"
description = "YapıKredi iOS Daily Orchestrator — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "openai>=1.55.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",
    "chromadb>=0.5.20",
    "atlassian-python-api>=3.41.16",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",
    "websockets>=13.1",
    "sse-starlette>=2.1.3",
    "rich>=13.9.0",
    "apscheduler>=3.10.4",
    "gitpython>=3.1.43",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "build*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
